task_8_cluster/myfrontend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: myfrontend-deployment
    labels:
        app: myapp-frontend
        type: frontend

spec:
    template:
        metadata:
            name: myfrontend-pod
            labels:
                app: myapp-frontend
                type: frontend
    
        spec:
            containers:
                - name: myfrontend-container
                  image: bjarzemb/myfrontend
                  stdin: true

    replicas: 3
    selector:
        matchLabels:
            type: frontend
