task_8_cluster/mybackend-service-clusterip.yml
apiVersion: v1
kind: Service

metadata:
    name: myapp-backend-clusterip

spec:
    type: ClusterIP
    ports:
        - targetPort: 4000
          port: 4000

    selector:
        type: backend
