task_8_cluster/myfrontend-service-clusterip.yml
apiVersion: v1
kind: Service

metadata:
    name: myapp-frontend-clusterip

spec:
    type: ClusterIP
    ports:
        - targetPort: 3000
          port: 80

    selector:
        type: frontend
