task_8_cluster/postgres-service-clusterip.yml
apiVersion: v1
kind: Service

metadata:
    name: mypostgresservice

spec:
    type: ClusterIP
    ports:
        - targetPort: 5432
          port: 5432

    selector:
        type: db
